src/components/UserListItem/UserListItem.module.css
.listItem {
  height: 90px;
  background: #fff;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #475666;
  font-size: 14px;
  font-weight: 500;
  text-decoration: none;
}

.listItem:nth-child(2n) {
  background: #e7f0ff;
}

.avatar {
  width: 6%;
  display: flex;
  justify-content: center;
}

.name {
  width: 23%;
  display: flex;
  flex-direction: column;
}

.userName {
  font-size: 9px;
}

.company {
  width: 20%;
}

.contacts {
  width: 23%;
}

.updates {
  width: 10%;
}

.buttons {
  width: 10%;
  z-index: 100;

  display: flex;
  justify-content: space-evenly;
}

.deleteBtn {
  cursor: pointer;
  background: none;
  outline: none;
  border: none;
}

.deleteBtn path {
  stroke: #b1bcc9;
}

.deleteBtn:hover path {
  stroke: #8899ac;
  fill: #8899ac;
}

.editIcon path {
  stroke: #b1bcc9;
  fill: #b1bcc9;
}

.editIcon:hover path {
  stroke: #8899ac;
  fill: #8899ac;
}

.confirmedListItem {
  transition: all 0.5s;
  transform: translateX(-70px);
}

.confirmedDeleteBtn {
  color: #ff8989;
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  cursor: pointer;
  background: none;
  outline: none;
  border: none;
  transform: translateX(70px);
  display: flex;
}

.deleteIcon path {
  stroke: #ff8989;
}

.avatarSize {
  width: 40px;
  height: 40px;
}

